# Virtual-touchpad

./: CMakeLists.txt  README.md
res/: res.qrc
src/: MovieLabel.h  VMouse.h  Vtouchpad.cpp  Vtouchpad.h  main.cpp  mouseType.h
